--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,41 @@
-include ':app'
+pluginManagement {
+    def flutterSdkPath = {
+        def properties = new Properties()
+        file("local.properties").withInputStream { properties.load(it) }
+        def flutterSdkPath = properties.getProperty("flutter.sdk")
+        assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+        return flutterSdkPath
+    }()
 
-def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
-def properties = new Properties()
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
 
-assert localPropertiesFile.exists()
-localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
 
-def flutterSdkPath = properties.getProperty("flutter.sdk")
-assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    
+    // id "com.android.application" version "7.3.0" apply false
+    // id "com.android.application" version "7.3.1" apply false
+    // id "com.android.application" version "8.0.2" apply false
+    // id "com.android.application" version "8.1.1" apply false
+    // id "com.android.application" version "8.3.0" apply false // android_alarm_manager_plus
+    id "com.android.application" version "8.3.1" apply false
+    // id "com.android.application" version "8.3.2" apply false
+
+    // START: FlutterFire Configuration
+    id "com.google.gms.google-services" version "4.3.15" apply false
+    // END: FlutterFire Configuration
+
+    id "org.jetbrains.kotlin.android" version "1.9.23" apply false
+    // id "org.jetbrains.kotlin.android" version "1.9.24" apply false
+    // id "org.jetbrains.kotlin.android" version "1.9.25" apply false
+}
+
+include ":app"
+// include ':app', ':isar_flutter_libs'
+// project(':isar_flutter_libs').projectDir = new File(rootProject.projectDir, '../.dart_tool/flutter_build/isar_flutter_libs/android')
